results/SpecGenBench/4-shot/log-RepeatedCharNested-2023_11_28_01_27_08.txt
public class RepeatedCharNested {

    //@ requires (\forall int i; 0 <= i && i < s.length(); (int)Character.MIN_VALUE <= (int)s.charAt(i) && (int)s.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result == -1 || (0 <= \result && \result < s.length());
    public static int repeatedChar(String s) {
        //@ maintaining (\forall int k; 0 <= k && k < i; s.charAt(k) != s.charAt(j));
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            char c1 = s.charAt(i);
            //@ maintaining (\forall int k; i+1 <= k && k < j; s.charAt(k) != c1);
            //@ decreases s.length() - j;
            for (int j = i + 1; j < s.length(); ++j) {
                char c2 = s.charAt(j);
                if(c1 == c2)
                    return i;
            }
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/RepeatedCharNested.java:6: error: cannot find symbol
        //@ maintaining (\forall int k; 0 <= k && k < i; s.charAt(k) != s.charAt(j));
                                                                                 ^
  symbol:   variable j
  location: class RepeatedCharNested
1 error

